# hfsgraph

./: .clang-format  .gitignore  CMakeLists.txt  CONCEPT.md  Cargo.toml  Makefile  README.md
.claude/: TODO.md  todo-treemap-build.md
docs/architecture/: INDEX.md  adr.yaml
docs/architecture/core/: ADR-100-durable-directory-identity-via-uuid-in-xattr-with-inode-fingerprint.md  ADR-101-graph-model-containment-tree-as-state-mirror-not-dataflow.md  ADR-102-semantic-groups-rule-derived-and-manual-membership-durable-id-keyed-json-persisted.md
docs/architecture/engine/: ADR-200-changeset-legality-and-safety-model-ledger-dry-run-volumes-immutability-commit.md
docs/architecture/platform/: ADR-400-technology-stack-standalone-qt6-kde-frameworks-no-embedded-webview.md  ADR-400-technology-stack-standalone-rust-egui-no-embedded-webview.md  ADR-401-rust-core-behind-a-cxx-in-process-boundary-promotable-to-out-of-process.md
docs/architecture/ui/: ADR-300-canvas-model-collapse-expand-containment-morph-and-snap-to-physics-layout.md  ADR-301-treemap-as-the-canvas-squarified-nested-containment-with-semantic-lod-zoom.md  ADR-302-move-staging-drag-arrow-gesture-queued-changeset-with-scrub-preview-atomic-commit.md  ADR-303-investigation-frames-double-click-opens-a-floating-focused-treemap-with-callout-lines-one-shared-scene-and-ledger.md  ADR-304-frames-as-the-universal-surface-resizable-frames-level-0-as-a-root-frame-and-multiple-base-surfaces.md
src/: main.cpp  main.rs
src/core/: commit.cpp  commit.h  fsnode.h  group.cpp  group.h  groupstore_io.cpp  groupstore_io.h  move.cpp  move.h  scanner.cpp  scanner.h
src/platform/: identity.cpp  identity.h
src/ui/: canvasview.cpp  canvasview.h  filetypestyle.cpp  filetypestyle.h  frameitem.cpp  frameitem.h  graphscene.cpp  graphscene.h  grouppanel.cpp  grouppanel.h  mainwindow.cpp  mainwindow.h  nodeitem.cpp  nodeitem.h  queuepanel.cpp  queuepanel.h  squarify.cpp  squarify.h  treemapitem.cpp  treemapitem.h
tests/: commit_test.cpp  groupstore_io_test.cpp  identity_test.cpp  move_test.cpp  squarify_test.cpp
