[package]
name = "hfsgraph"
version = "0.0.0"
edition = "2021"
description = "A canvas tool for re-wiring a directory hierarchy to match its semantic structure"
license = "MIT"
repository = ""
rust-version = "1.80"

[dependencies]
# UI/canvas (egui) and the filesystem engine crates are added when the POC viewer
# lands — see ADR-400 (stack) and ADR-200 (engine). Kept dependency-free for now so
# the toolchain (build/test/lint/format) is wired before any real code exists.

[profile.release]
opt-level = 3
lto = "thin"
